# vikki

./: .gitignore  LICENCE  README.md
agent/: CMakeLists.txt  vikki-agent.cfg
agent/core/: CMakeLists.txt
agent/core/include/: command.h  config.h  exception.h  json.h  lsignal.h  network.h  sensor.h  sensor_loader.h  service.h  storage.h  storage_loader.h
agent/core/include/asio/detail/: posix_signal_blocker.hpp  signal_set_service.hpp
agent/core/include/network/: client.h  client_session.h  client_session_non_ssl.h  client_session_ssl.h  configuration.h  connection.h  encryption.h  helper.h  istream.h  ostream.h  server.h  server_session.h  server_session_non_ssl.h  server_session_ssl.h  socket.h  socket_non_ssl.h  socket_ssl.h
agent/core/src/: config.cpp  exception.cpp  main.cpp  network.cpp  sensor.cpp  sensor_loader.cpp  service.cpp  storage.cpp  storage_loader.cpp
agent/core/src/network/: client.cpp  client_session.cpp  client_session_non_ssl.cpp  client_session_ssl.cpp  connection.cpp  encryption.cpp  helper.cpp  istream.cpp  ostream.cpp  server.cpp  server_session.cpp  server_session_non_ssl.cpp  server_session_ssl.cpp  socket.cpp  socket_non_ssl.cpp  socket_ssl.cpp
agent/sensors/: CMakeLists.txt
agent/sensors/file_system_usage_sensor/: CMakeLists.txt
agent/sensors/file_system_usage_sensor/include/: file_system_usage_sensor.h
agent/sensors/file_system_usage_sensor/src/: file_system_usage_sensor.cpp
agent/sensors/load_average_sensor/: CMakeLists.txt
agent/sensors/load_average_sensor/include/: load_average_sensor.h
agent/sensors/load_average_sensor/src/: load_average_sensor.cpp
agent/sensors/memory_usage_sensor/: CMakeLists.txt
agent/sensors/memory_usage_sensor/include/: memory_usage_sensor.h
agent/sensors/memory_usage_sensor/src/: memory_usage_sensor.cpp
agent/storages/: CMakeLists.txt
agent/storages/postgresql_storage/: CMakeLists.txt
agent/storages/postgresql_storage/include/: postgresql_storage.h
agent/storages/postgresql_storage/src/: postgresql_storage.cpp
client/: vikki-client.cfg  vikki_client.pro
client/core/: application.cpp  application.h  command.h  config.h  core.pro  main.cpp  resources.qrc  settings.cpp  settings.h  window.cpp  window.h
client/core/network/: client.cpp  client.h  client_controller.cpp  client_controller.h  client_worker.cpp  client_worker.h  network_connection.cpp  network_connection.h  network_stream_in.cpp  network_stream_in.h  network_stream_out.cpp  network_stream_out.h  network_worker.cpp  network_worker.h
client/core/sensor/: sensor_client_proxy.cpp  sensor_client_proxy.h  sensor_dashboard.cpp  sensor_dashboard.h  sensor_dashboard_plot.cpp  sensor_dashboard_plot.h  sensor_plugin.cpp  sensor_plugin.h
client/sensors/: sensors.pro
client/sensors/file_system_usage_sensor/: file_system_usage_sensor.cpp  file_system_usage_sensor.h  file_system_usage_sensor.pro  file_system_usage_sensor_dashboard.cpp  file_system_usage_sensor_dashboard.h  icons.qrc
client/sensors/load_average_sensor/: icons.qrc  load_average_sensor.cpp  load_average_sensor.h  load_average_sensor.pro  load_average_sensor_dashboard.cpp  load_average_sensor_dashboard.h
client/sensors/memory_usage_sensor/: icons.qrc  memory_usage_sensor.cpp  memory_usage_sensor.h  memory_usage_sensor.pro  memory_usage_sensor_dashboard.cpp  memory_usage_sensor_dashboard.h
